codepkg/objects/Shipment_Order__c.object
<CustomObject>
    <fields>
        <fullName>Creator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipment Orders</relationshipLabel>
        <relationshipName>Shipment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Schedule Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>To Store External Id generated by Mulesoft</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order(To Be Deleted)</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Shipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <formula>Order_Custom__r.Purchase_Order_Number__c</formula>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Parent_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Parent Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <displayFormat>SHIP-{0000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Shipment_Received_Total_Quantity__c</fullName>
        <label>Shipment Received Total Quantity</label>
        <summarizedField>Shipment_Order_Line_Item__c.Product_Received_BOL_Total_Quantity__c</summarizedField>
        <summaryForeignKey>Shipment_Order_Line_Item__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipment_Total_Quantity__c</fullName>
        <label>Shipment Total Quantity</label>
        <summarizedField>Shipment_Order_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Shipment_Order_Line_Item__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Company_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Company Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Other_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Sent to Warehouse</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>InTransit</fullName>
                    <isActive>false</isActive>
                    <label>InTransit</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                    <isActive>false</isActive>
                    <label>Sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warehouse Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Orders</relationshipLabel>
        <relationshipName>ShipmentWareHouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipment Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Custom__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Orders</pluralLabel>
    <recordTypes>
        <fullName>Bulk_Procurement</fullName>
        <active>true</active>
        <label>Bulk Procurement</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHOS</fullName>
        <active>true</active>
        <label>PHOS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>